--- a/atracciones.css
+++ b/atracciones.css
@@ -1,44 +1,111 @@
 *{
     box-sizing: border-box;
+    margin: 0%;
+}
+body{
+    padding-top: 90px;
+}
 
+.header{
+    background-color: rgb(190, 186, 186);
+    height: 90px;
+    position: fixed; /*para fijar la barra de navegacion*/
+    z-index: 2;
+    width: 100%;
+    top: 0%;
+    left: 0%;
+    padding: 2rem; /*para separarlo del borde*/
+    display: flex; 
+    align-items: center; /*el item no intente tener la misma altura que los enlaces*/
+    justify-content: space-between; /*separa el icono de los enlaces*/
 }
 
 
-header{
-    background-color: aliceblue;
-    height: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-   
-        position: fixed;
-        z-index: 2;
-        width: 100%;
+.items{
+    color: cornflowerblue;
+}
 
+.abrir-menu{
+    display: none; /*hace que el boton no se vea*/
 }
-.logo-container{
-    display: flex;
-    align-items: center;
-    margin-right: 5%;
+
+.list-container{  
+    list-style-type: none; /*le saca las viñetas a la lista */
+    display: flex; /* pone una al lado de la otra las palabras*/
+    gap: 2rem; /* determina los espacios entre las palabras*/
+    margin-right: 10px;
 }
-.enlaces{
-    margin-right: 15px;
+
+.items{
     text-decoration: none;
-}
-.logo-img{
-    margin-right: 10px ;
-}
-.arg{
-    margin-right: 5px;
-}
-.enlaces:hover{
-    background-color: rgb(250, 193, 124);
-    border-radius: 10%; /* redondea los bordes*/
-    transform: scale(1.5);
-    transition: all .5s ease-in-out .1s;
+
 }
 
+.abrir-menu{
+     display: none;
+}
+.cerrar-menu{
+    display: none; /* antes de llegar a los 550px el boton cerrado no se ve*/
+}
+
+@media screen and (max-width: 735px) {
+
+    .info{
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 588px) {
+    
+    .abrir-menu, .cerrar-menu{  /*para que cuando llego o pase los 550px se muestran los dos botones en sus respectivmos lugares*/
+        display: block;
+        border: 0;
+        font-size: 1.25;
+        cursor: pointer;
+    }
+    .cerrar-menu{
+        background-color: cornflowerblue ;
+    }
+
+    .abrir-menu{
+        margin-right: 15px;
+        background-color:  rgb(190, 186, 186);
+    }
+
+    .nav{
+        opacity: 0;
+        visibility: hidden;/*para que no se vea el menu, se usa como prueba antes de enlasar con java script*/
+
+        display: flex;
+        flex-direction: column; /*se separa en columnas*/
+        align-items: end; /*se ponen todos los elementos donde termina*/
+        gap: 1rem;
+        position: absolute;
+        top: 0; /*para que empiece arriba*/
+        right: 0; /*para que empiece a la derecha*/
+        background-color: cornflowerblue;
+        padding: 2rem; /*para que no se pegue a los bordes*/
+        margin-bottom: 0%;
+        box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5); /*Para que el resto de la pantalla tenga un fondo medio gris*/
+        
+    }
+
+    .visible{ /*cuando toquemos el menu hmaburguesa se va a abrir el menu*/
+        opacity: 1;
+        visibility: visible;
+    }
+
+
+    .list-container{
+        flex-direction: column;
+        align-items:end;
+    }
+    
+    .items{
+        color: white;
+    }
+}
 .contenedor{
     background-image: url(imagenes/encabezado\ prueba.jpg);
     height: 500px;
@@ -78,10 +145,11 @@ header{
 
 .grid-container{
     height: 1100px;
+    width: 100%;
+    
     display: grid;
     grid-auto-rows: 500px; /* Para definir el alto de las filas*/ 
-    grid-template-columns: repeat(3, 1fr); /* El repeat es para agilizar la progamacion del codigo. Es lo mismo que poner grid-template-columns: 1 fr 1fr 1fr;*/
-
+    grid-template-columns: repeat(4, 2fr); /* El repeat es para agilizar la progamacion del codigo. Es lo mismo que poner grid-template-columns: 1 fr 1fr 1fr;*/
     grid-column-gap: 15px;
     grid-row-gap: 25px;
 }
@@ -107,7 +175,6 @@ header{
     background-color: cornflowerblue;
     height: 100px;
     margin-bottom: 40px;
-    margin-top: px;
     width: 100%;
     margin-right: 0;
     margin-left: 0;
