--- a/estilos.css
+++ b/estilos.css
@@ -52,53 +52,105 @@
     width: 100%;
 }*/
 
-.nav{
-    background-color: whitesmoke;
-    height: 100%; 
-    
-}
-.nav-info-1{
-    font-family: "Raleway", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: bolder;
-    font-style: normal;
+.header{
+    background-color: rgb(190, 186, 186);
+    height: 90px;
+    position: fixed; /*para fijar la barra de navegacion*/
+    z-index: 2;
+    width: 100%;
+    top: 0%;
+    left: 0%;
+    padding: 2rem; /*para separarlo del borde*/
+    display: flex; 
+    align-items: center; /*el item no intente tener la misma altura que los enlaces*/
+    justify-content: space-between; /*separa el icono de los enlaces*/
 }
 
 
-.nav-contenedor{
-    
-    display: flex;
-    height: 85%; 
-    width: 90%;
-    margin: 0 auto;
-    justify-content: space-between;
-    align-items: center;
-    
+.items{
+    color: cornflowerblue;
 }
-.argetina-inicio{
-    display: grid;
-    grid-auto-flow: column;
-    gap: 3em;
+
+.abrir-menu{
+    display: none; /*hace que el boton no se vea*/
 }
-.argentina-item{
-    color: rgb(4, 144, 179);
+
+.list-container{  
+    list-style-type: none; /*le saca las viñetas a la lista */
+    display: flex; /* pone una al lado de la otra las palabras*/
+    gap: 2rem; /* determina los espacios entre las palabras*/
+    margin-right: 10px;
+}
+
+.items{
     text-decoration: none;
+
 }
-.argentina-item:hover{
-    color: rgb(209, 209, 87);
-    transform: scale(1.1);
-    transition: all .5s ease-out .1s;
+
+.abrir-menu{
+     display: none;
 }
-.nav-input{ 
-    display: none;  /*desaparece la box*/
+.cerrar-menu{
+    display: none; /* antes de llegar a los 550px el boton cerrado no se ve*/
 }
-.nav-icono{  /*Aparece el pulsor arriba del icono*/
-    display: block;
-    cursor: pointer;
-    margin-left: 0;
-    margin-right: 5%;
-    transition: all .5 ease-in-out .1s;
-    transform: scale(1.1);
+
+@media screen and (max-width: 735px) {
+
+    .info{
+        display: none;
+    }
+
+}
+
+@media screen and (max-width: 588px) {
+    
+    .abrir-menu, .cerrar-menu{  /*para que cuando llego o pase los 550px se muestran los dos botones en sus respectivmos lugares*/
+        display: block;
+        border: 0;
+        font-size: 1.25;
+        cursor: pointer;
+    }
+    .cerrar-menu{
+        background-color: cornflowerblue ;
+    }
+
+    .abrir-menu{
+        margin-right: 15px;
+        background-color:  rgb(190, 186, 186);
+    }
+
+    .nav{
+        opacity: 0;
+        visibility: hidden;/*para que no se vea el menu, se usa como prueba antes de enlasar con java script*/
+
+        display: flex;
+        flex-direction: column; /*se separa en columnas*/
+        align-items: end; /*se ponen todos los elementos donde termina*/
+        gap: 1rem;
+        position: absolute;
+        top: 0; /*para que empiece arriba*/
+        right: 0; /*para que empiece a la derecha*/
+        background-color: cornflowerblue;
+        padding: 2rem; /*para que no se pegue a los bordes*/
+        margin-bottom: 0%;
+        box-shadow: 0 0 0 100vmax rgba(0, 0, 0, .5); /*Para que el resto de la pantalla tenga un fondo medio gris*/
+        
+    }
+
+    .visible{ /*cuando toquemos el menu hmaburguesa se va a abrir el menu*/
+        opacity: 1;
+        visibility: visible;
+    }
+
+
+    .list-container{
+        flex-direction: column;
+        align-items:end;
+    }
+    
+    .items{
+        color: white;
+    }
 }
 /*
 .nav-menu{
